Fix alignment of download button when the 'back to search results' link isn't displayed.
This was incorrectly ranged left, when it shoud have been flush with the right margin.

--- a/ds_judgements_public_ui/sass/includes/_judgment_text_toolbar.scss
+++ b/ds_judgements_public_ui/sass/includes/_judgment_text_toolbar.scss
@@ -80,7 +80,14 @@
   }
 }
 
-.judgment-download {
+.judgment-toolbar-download {
+
+  margin: 0 auto;
+
+  @media (min-width: $grid__breakpoint-small) {
+    margin-left: auto;
+    margin-right: 0;
+  }
 
   &__option--pdf {
     margin: 0 !important;
